# linalg_wrap

./: linalg_wrap.cpp  meson.build
subprojects/: .gitignore  linalg.wrap
